--- a/package.json
+++ b/package.json
@@ -3,24 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@babel/runtime": "^7.21.5",
+    "@svgr/webpack": "^7.0.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
+    "antd": "^5.4.4",
+    "axios": "^1.3.6",
+    "file-loader": "^6.2.0",
+    "next": "^13.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.10",
     "typescript": "*",
-    "web-vitals": "^2.1.0"
+    "url-loader": "^4.1.1",
+    "web-vitals": "^3.3.1",
+    "zustand": "^4.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "next": "next"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +54,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.21.4",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "babel-plugin-styled-components": "^2.1.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
